# parakeet

./: .gitignore  Cargo.toml  Makefile  README.md  class_parakeet_components.puml  sequence_parakeet_install.puml
docs/umls/configuration/: activity-diagram.puml
docs/umls/installation/: activity-diagram.puml  component-diagram.puml
installation/: parakeet-install.py
installation/etc/: config.json
